-> Corrections and modifications to resubmit regarding orientation changes logic and code, widgets, network data, etc...

--- a/app/src/main/res/layout/fragment_view_step.xml
+++ b/app/src/main/res/layout/fragment_view_step.xml
@@ -19,7 +19,7 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/player_default_error_iv"
+                    android:id="@+id/player_iv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone"
