--- a/app/src/main/res/layout/recipes_widget.xml
+++ b/app/src/main/res/layout/recipes_widget.xml
@@ -1,15 +1,47 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
-    >
+    android:orientation="vertical">
 
-    <GridView
-        android:id="@+id/recipes_gv"
+    <TextView
+        android:id="@+id/recipe_name_tv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:numColumns="3"/>
+        android:layout_margin="@dimen/recipe_item_margin"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/general_text_size_22"
+        android:textStyle="bold"
+        tools:text="Recipe Name" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/ingredients_label_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_margin="@dimen/recipe_widget_margin"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/general_text_size_20"
+        android:textStyle="normal"
+        android:visibility="gone"
+        android:text="@string/ingredients" />
+
+    <TextView
+        android:id="@+id/ingredients_items_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/recipe_item_margin"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/general_text_size_18"
+        android:textStyle="normal"
+        android:visibility="gone"
+        tools:text="Items, items, items, items" />
+
+</LinearLayout>
+
